[tool.poetry]
name = "resumai"
version = "0.1.0"
description = ""
authors = ["Briscoooe <brianbriscoe06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.186"
openai = "^0.27.7"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
